# clara

./: .clang-format  .gitignore  CMakeLists.txt  README.md
clara-v0.0.1/: CMakeLists.txt
include/clara/: clara.hpp
tests/: CMakeLists.txt
tests/src/: main.cpp  main.gtest.cpp  main.nongtest.cpp  main.test.cpp
